--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -46,9 +46,10 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin-top: 15px;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #f875ff;
 }
 button:focus,
 button:focus-visible {
@@ -66,4 +67,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+li {
+  text-align: left;
+  gap: 1rem;
+}
+
+.btn-delete {
+  padding: 0.2em 1em;
+  margin-left: 3.5em;
+}
+
+ul {
+  list-style-type: none;
 }
