--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  /* place-items: center; */
+  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -81,4 +81,8 @@ li {
 
 ul {
   list-style-type: none;
+}
+
+h3 {
+  margin-right: 34px;
 }
